<resources>
    <string name="phf_blocks_error_format">Phf blocks must be bigger than %d</string>
    <string name="phf_iterations_error_format">Phf iterations must be bigger than %d</string>
    <string name="blind_salt_is_missing">Blind salt is missing</string>
    <string name="b_param_is_missing">B param is missing</string>
    <string name="initial_device_name">FUTO Circles (Android)</string>
    <string name="initial_sync">Initial sync</string>
    <string name="session_sync">Session sync</string>
    <string name="not_found_login_flow_for_user">Log In flow for user not found</string>
    <string name="unsupported_login_method">Unsupported login method</string>
    <string name="discard_current_auth_progress">Discard current auth progress?</string>
    <string name="set_password">Set password</string>
    <string name="log_in">Log In</string>
    <string name="wrong_signup_config">Wrong signup config!</string>
    <string name="us_server_format"><![CDATA[<b>US</b> - (%s)]]></string>
    <string name="eu_server_format"><![CDATA[<b>EU</b> - (%s)]]></string>
    <string name="sign_up_using_active_subscription">Sign Up using your active subscription</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_stage_subtitle_format">Stage %1$d of %2$d</string>
    <string name="no_backup_message">Keys backup not found</string>
    <string name="username_can_not_be_empty">Username can not be empty.</string>
    <string name="confirm_auth">Confirm auth</string>
    <string name="email">Email</string>
    <string name="email_usage_explanation">Must be a currently valid and active address.\n\nDon\'t worry - we will only use this address for security and other alerts about your account. We don\'t send spam, and we don\'t sell your address.</string>
    <string name="validation_code">Validation code</string>
    <string name="validation_code_explanation">We sent a 6-digit code to your email address to validate your account.\n\nEnter the code here to verify that this address belongs to you.</string>
    <string name="validation_code_sent_to_format">Validation code sent to %s</string>
    <string name="sign_up_token">SignUp token</string>
    <string name="sign_up_token_explanation">In order to sign up for a service, every new user must present a valid registration token.\n\nIf you found out about the app from a friend or from the posting online, you should be able to get a signup token from the same source.</string>
    <string name="name_for_room_invite">Room invite</string>
    <string name="name_for_empty_room">Empty room</string>
    <string name="and">and</string>
    <string name="other">Other</string>
    <string name="display_name">Display name</string>
    <string name="display_name_explanation">Your display name is how other users on the service will identify you.</string>
    <string name="weak_password">Weak password</string>
    <string name="fair_password">Fair password</string>
    <string name="good_password">Good password</string>
    <string name="strong_password">Strong password</string>
    <string name="very_strong_password">Very strong password</string>
    <string name="backup_could_not_be_decrypted_with_key">Backup could not be decrypted with this recovery key.</string>
    <string name="generating_recovery_key">Generating recovery key from passphrase.</string>
    <string name="creating_backup">Creating backup</string>
    <string name="backup_already_exist">Backup already exist</string>
    <string name="removing_backup">Removing previous backup</string>
    <string name="computing_recovery_key">Computing recovery key.</string>
    <string name="downloading_keys">Downloading keys.</string>
    <string name="importing_keys">Importing keys.</string>
    <string name="decrypting_key">Decrypting key.</string>
    <string name="failed_to_get_restore_keys_version">Failed to get latest restore keys version.</string>
    <string name="domain">Domain</string>
    <string name="accept_terms_to_continue">Accept terms to continue</string>
    <string name="username">username</string>
    <string name="at_symbol">\@</string>
    <string name="user_id_separator">:</string>
    <string name="not_a_member">Not a member?</string>
    <string name="resume_session">Resume session:</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="server">Server</string>
    <string name="sign_up_with_subscription">Sign up with subscription</string>
    <string name="sign_up_for_free">Sign up for free</string>
    <string name="or">Or</string>
    <string name="setup_profile">Setup profile</string>
    <string name="upload_a_profile_photo">Upload a profile photo</string>
    <string name="save">Save</string>
    <string name="skip">Skip</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="subscription">Subscription</string>
    <string name="manage_subscription">Manage subscription</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="set_username">Set username</string>
    <string name="send_validation_code">Send validation code</string>
    <string name="validate_email">Validate email</string>
    <string name="validate_your_token">Validate your token</string>
    <string name="sign_up_token_format">abcd–efgh–1234–5678</string>
    <string name="validate_token">Validate token</string>
    <string name="recovery">Recovery</string>
    <string name="recovery_key">Recovery Key</string>
    <string name="use_your_recovery_message">Use your Recovery Passphrase or Recovery Key to continue.</string>
    <string name="passphrase">Passphrase</string>
    <string name="upload_recovery_key_file">Upload Recovery Key file</string>
    <string name="restore">Restore</string>
    <string name="validate_your_email">Validate your email</string>
    <string name="not_supported_navigation_event">Not supported navigation event</string>
    <string name="feature_not_supported">Feature is not supported</string>
    <string name="service_unavailable">Service unavailable</string>
    <string name="item_unavailable">Item is unavailable</string>
    <string name="user_canceled">User canceled</string>
    <string name="item_not_owned">Item is not owned</string>
    <string name="developer_error">Developer error</string>
    <string name="purchase_failed_format">Purchase failed with code %d</string>
    <string name="log_out">Log out</string>
    <string name="log_out_message">Are you sure you want to log out?</string>
    <string name="switch_user">Switch User</string>
    <string name="switch_user_message">Are you sure you want to switch user?</string>
    <string name="switch_str">Switch</string>
    <string name="change_password">Change password</string>
    <string name="new_password">New password</string>
    <string name="old_password">Old Password</string>
    <string name="repeat_new_password">Repeat new password</string>
    <string name="remove_session">Remove session</string>
    <string name="remove_session_message">In order to sign out from this session you should confirm your auth.</string>
    <string name="reset_keys">Reset keys</string>
    <string name="reset_keys_message">Confirm auth to reset keys and enable cross signing</string>
    <string name="forgot_password_message">After verifying your email the new password and key backup will be set.\n\nWarning: With a new key backup you will not be able to see all your previous encrypted messages, this action can not be undone.</string>
    <string name="confirm">Confirm</string>
    <string name="failed_to_read_qr_code">Failed to read QR code</string>
    <string name="current_session">Current session</string>
    <string name="other_sessions">Other sessions</string>
    <string name="invalid_auth">Invalid auth</string>
    <string name="scan_with_one_of_devices_message">Scan QR code with one of your devices to finish verification</string>
    <string name="cross_signed">cross signed</string>
    <string name="waiting_for_other_device_verification">Waiting for other device to start verification</string>
    <string name="session_verified">Session verified</string>
    <string name="verification_canceled">Verification canceled</string>
    <string name="active_login_sessions">Active login sessions</string>
    <string name="login_sessions">Login sessions</string>
    <string name="verify_session">Verify session</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="profile_updated">Profile updated</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="user_id">User ID</string>
    <string name="verify">Verify</string>
    <string name="got_it">Got it</string>
    <string name="groups">Groups</string>
    <string name="circles">Circles</string>
    <string name="friends">Friends</string>
    <string name="family">Family</string>
    <string name="community">Community</string>
    <string name="retry">Retry</string>
    <string name="workspace_configured">Workspace configured</string>
    <string name="validating_workspace">Validating workspace</string>
    <string name="configure_workspace">Configure workspace</string>
    <string name="setup_workspace_message">In order to use app we needs to configure your workspace. \nWe will create root spaces listed below and setup all the necessary relations between them.</string>
    <string name="root_space_description">Root space of workspace hierarchy</string>
    <string name="groups_space_description">Space which will contain all the Groups</string>
    <string name="circles_space_description">Space which will contain all the Circles</string>
    <string name="galleries_space_description">Space which will contain all the Galleries</string>
    <string name="people_space_description">Space which will contain all the connected users</string>
    <string name="profile_space_description">Space which will contain all your public Circles. Other users will be able to ask to join this space to follow you</string>
    <string name="photos_room_description">Optional: Photos gallery room for your media. You will be able to create it anytime</string>
    <string name="friends_circle_description">Optional: Circle to follow your friends timelines. You will be able to create it anytime</string>
    <string name="family_circle_description">Optional: Circle to follow your family members timelines. You will be able to create it anytime</string>
    <string name="community_circle_description">Optional: Circle to follow other people timelines. You will be able to create it anytime</string>
    <string name="i_understand">I understand</string>
    <string name="circles_is_different">Circles is different!</string>
    <string name="passphrase_usage_explanation">On the next screen we will ask you to set up a passphrase to your account.\n\nCircles uses your passphrase to log in AND to protect your encryption keys.</string>
    <string name="forget_passphrase_warning">If you forget your passphrase, you won\'t be able to recover posts or photos on a new device.</string>
    <string name="passphrase_tip">Tip: It\'s OK to write your passphrase down and store it in a secure location.</string>
</resources>