<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    app:layout_constraintBottom_toTopOf="@id/btnSetUsername"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:paddingVertical="24dp">

        <ImageView
            android:id="@+id/ivLogo"
            style="@style/AuthLogoStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/tvPasswordTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.35"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPasswordTitle"
            style="@style/title2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/enter_your_username"
            app:layout_constraintBottom_toTopOf="@id/tilUserName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivLogo" />

        <TextView
            android:id="@+id/tvAt"
            style="@style/body"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/at_symbol"
            app:layout_constraintBottom_toBottomOf="@id/tilUserName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tilUserName" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUserName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/username"
            app:layout_constraintEnd_toStartOf="@id/tvDomainSeparator"
            app:layout_constraintHorizontal_weight="0.55"
            app:layout_constraintStart_toEndOf="@id/tvAt"
            app:layout_constraintTop_toBottomOf="@id/tvPasswordTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textNoSuggestions"
                android:maxLines="1"
                android:padding="12dp"
                android:textSize="17sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvDomainSeparator"
            style="@style/body"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/user_id_separator"
            app:layout_constraintBottom_toBottomOf="@id/tilUserName"
            app:layout_constraintEnd_toStartOf="@id/tvServerDomain"
            app:layout_constraintStart_toEndOf="@id/tilUserName"
            app:layout_constraintTop_toTopOf="@id/tilUserName" />

        <TextView
            android:id="@+id/tvServerDomain"
            style="@style/body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            app:layout_constraintBottom_toBottomOf="@id/tilUserName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="0.45"
            app:layout_constraintStart_toEndOf="@id/tvDomainSeparator"
            app:layout_constraintTop_toTopOf="@id/tilUserName"
            tools:text="eu.kombucha.social" />

        <org.futo.circles.core.view.LoadingButton
            android:id="@+id/btnSetUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:enabled="false"
            android:text="@string/set_username"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilUserName"
            app:layout_constraintVertical_bias="1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
